--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,17 +19,6 @@
         </div>
       </div>
     </div>
-
-     <div class="topbar-center">
-      {% if user.is_authenticated %}
-        <div class="searchbox">
-          <span class="searchicon">🔎</span>
-          <input type="text" placeholder="Buscar..." />
-        </div>
-      {% endif %}
-    </div>
-
-
     <div class="topbar-right">
       {% if user.is_authenticated %}
         <div class="userchip">
@@ -37,12 +26,15 @@
           <span class="username">{{ user.get_full_name|default:user.username }}</span>
         </div>
 
-        <form method="post" action="{% url 'logout' %}" style="display:inline;">
+        <a class="btn btn-sm " href="{% url 'password_change' %}">⚙️ Cuenta</a>
+
+        <form method="post" action="{% url 'logout' %}" class="inline-form">
           {% csrf_token %}
-          <button class="linkbtn" type="submit">Salir</button>
+          <button class="linkbtn btn btn-sm " type="submit">Salir</button>
         </form>
       {% endif %}
     </div>
+
   </header>
   <div class="layout">
     {% if user.is_authenticated %}
@@ -58,10 +50,7 @@
         <div class="sidebar-footer">
           <div class="small muted">{{ user.get_full_name|default:user.username }}</div>
           <div class="small muted">Sesión activa</div>
-
-          <div class="mt-sm">
-            <a class="nav-link" href="{% url 'password_change' %}">🔒 Cambiar contraseña</a>
-          </div>
+          
         </div>
       </aside>
     {% endif %}
